welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: reassignment to val
		if(vacation = false) {
                            ^sleepIn:9: error: reassignment to val
	if(weekday = false){
                   ^sleepIn:10: error: type mismatch;
 found   : Unit
 required: Boolean
		if(vacation) {
                ^sleepIn:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if(weekday = false){
        ^